--- a/layout-article-property.twig
+++ b/layout-article-property.twig
@@ -207,7 +207,7 @@
                                     {{this.render('partials/gallery.twig', {
                                         media: article.media,
                                         default: imageFeature,
-                                        type: 'article',
+                                        type: 'gallery',
                                         galleryStyle: 'property'
                                     }) | raw}}
                                 {% endif %}
