--- a/static/sass/components/_component.signin-modal.scss
+++ b/static/sass/components/_component.signin-modal.scss
@@ -77,7 +77,7 @@
         @include flexbox;
         @include align-items(center);
         width: 100%;
-        margin-top: 10px;
+        // margin-top: 10px;
 
         .login-form__button {
             height: 48px;
