--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -73,6 +73,8 @@
 //my account page
 @import "cus_acnt_grid";
 @import "cus_acnt_page";
+@import "component.plan-table";
+@import "component.plan-features";
 
 //coming soon page
 @import "cus_coming_soon";
