--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -32,7 +32,7 @@
 @import "component.forgot-form";
 @import "component.reset-password";
 @import "component.checkbox";
-
+@import "component.swap-modal";
 @import "component.error";
 
 @import "component.article";
