--- a/static/sass/_trumps.utilities.scss
+++ b/static/sass/_trumps.utilities.scss
@@ -1149,7 +1149,7 @@ hr.divide {
 
 .u-noscroll {
     overflow: hidden;
-    height: 100%;
+    // height: 100%;
 }
 .clearfix {
     overflow: auto;
@@ -1246,6 +1246,10 @@ hr.divide {
 
 .flex_between {
     justify-content: space-between;
+}
+
+.u-flex-justify-center {
+    justify-content: center;
 }
 
 .flex-shrink0 {
