--- a/static/sass/components/_component.plan-table.scss
+++ b/static/sass/components/_component.plan-table.scss
@@ -4,7 +4,13 @@
 	  min-width: 800px;
 	}
 	&__row {
-		border-bottom: 8px solid $white;
+		border-bottom: 8px solid white;
+		background-color: $grey3;
+
+		&:nth-child(4n-3) {
+			background-color: #ececec;
+		}
+	
 	}
 	&__header {
 		background-color: #0a1630;
@@ -35,7 +41,6 @@
 
 	&__col {
 		height: 96px;
-		background-color: $grey3;
 		padding: 0 15px;
 		vertical-align: middle;
 		text-align: left;
@@ -50,11 +55,6 @@
 		}
 	}
 
-	&:nth-child(4n-3) {
-		td {
-			background-color: #ececec;
-		}
-	}
 	
 	
 
@@ -132,7 +132,6 @@
 	}
 
 	.active {
-	  > td {
 		background-color: #d5d1fd !important;
 		.cus_acnt__plan-table--feature {
 		  color: $blue_sh5 !important;
@@ -142,7 +141,6 @@
 		  color: $blue_sh5 !important;
 		  border: 1px solid $blue_sh5;
 		}
-	  }  
 	}
 
 	.folded {
