add spinner to account info change

--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -75,6 +75,7 @@
 @import "cus_acnt_page";
 @import "component.plan-table";
 @import "component.plan-features";
+@import "component.profile-message";
 
 //coming soon page
 @import "cus_coming_soon";
